# pyasm

./: .gitignore  A.mpy  CMakeLists.txt  Dockerfile.minimal  README.md  build.sh  gramar.txt  output  output.asm  test.py
Documentation/: ErreursSémantiques.md  enonce_partie_2.txt  erreurSémantiquesGérées.txt
GdP/Cr/: Réunion 15-10-24.docx
JeuTestsAvecErreur/: erreurAffection&OpérationIllégale.mpy  erreurNoNewlineEOF.mpy  erreurParenthèsageEtCrochets.mpy  erreurlexical1.mpy
data/JeuTestsAvecErreur/: erreurLexical2.mpy  erreurStringNonFermée.mpy  (+1 more)
data/examples/: affectEgalEgal  ex1.mpy  (+10 more)
docs/: controle_sem.txt  gramar.txt
examples/: ArrayTest  RecursiveTest  SemanticAnalyserTests  SemanticErrorsFullTest  SymbolTableTests  SymbolTableTests.py  TestGenCodeComplet  errorParser.mpy  ex1.mpy  ex2.mpy  exParseTest.mpy  exampleParser.mpy  factoriel.mpy  fonction.mpy  for-shadowing.mpy  for.mpy  forTest.mpy  ifTest  indent_error.mpy  name_error.mpy  operator.mpy  operator_error  pgTest1.mpy  plusUnMoinsUnPlusUn.mpy  programme.mpy  square.mpy  test  variable.mpy  variables.mpy
gestionErreur/: ErreursMultiplesV1.mpy  ErreursMultiplesV2  ErreursMultiplesV2.mpy  PlusieursErreurs.mpy  error1.mpy  error3.mpy  error4.mpy  errortests.mpy  no_error1.mpy  no_error3.mpy
include/: ASTNode.h  codeGenerator.h  lexer.h  parser.h  pyasm.h  semanticAnalyzer.h  symbolTable.h
scripts/: build.sh  clean.sh  execute.sh  full_build.sh  full_setup.sh  install_deps.sh  native_build.sh  run.sh  run_with_docker.sh
src/: codeGenerator.cpp  errorManager.cpp  errorManager.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  semanticAnalyzer.cpp  symbolTable.cpp  symbolTable.h
testPourSoutenance/: ErreursMultiplesV1
tests_erreurs/: error2.mpy
(+36 files in other folders)
